--- a/src/sortableList/SortableItem.css
+++ b/src/sortableList/SortableItem.css
@@ -1,7 +1,8 @@
 .DragHandle {
   display: inline-flex;
   width: 12px;
-  padding: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   align-items: center;
   justify-content: center;
   flex: 0 0 auto;
